2007-06-19  jtl  <jtl@schlund.de>

	* src/de/schlund/pfixcore/util/DumpText.java: Implement IDumptText. You can extend from DUmpText now and give 
	your extended class as an argument to the dumptext.sh. No need to copy the main method anymore
	* src/de/schlund/pfixcore/util/IDumpText.java: Helper interface to allow easier overwriting of
	the DumpText class.

2007-06-15  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* projects/core/editor2/txt/pages/main_home.xml: 
	Corrected wrong links on start page.

2007-06-13  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/webservice/ServiceDescriptor.java: detect service
	methods from super classes

2007-06-08  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/editor2/core/spring/internal/PageImpl.java:
	Fixed NullPointerException being raised when getThemes was called on a
	page object not having a target object. 

2007-06-04  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/workflow/ContextImpl.java: 
	* src/de/schlund/pfixcore/workflow/Context.java: 
	* src/de/schlund/pfixcore/example/InvalidateSessionState.java: 
	* src/de/schlund/pfixxml/SessionCleaner.java: 
	* src/de/schlund/pfixxml/AbstractXMLServlet.java: 
	* projects/sample1/txt/pages/main_invalidate.xml: 
	* projects/sample1/txt/pages/main_home.xml: 
	* projects/sample1/xml/two_frames.xml: 
	* projects/sample1/conf/config.conf.xml: 
	* projects/sample1/conf/depend.xml: 
	Added method markSessionForCleanup() to Context interface. This will cause a
	session to be invalidated as soon as reasonable possible.

	* src/de/schlund/pfixcore/editor2/frontend/util/EditorApplicationContextFactory.java (run): 
	Use getBeanNamesForType() instead of deprecated getBeanDefinitionNames() method.

2007-06-01  Martin Leidig  <mleidig@schlund.de>

	* projects/core/script/webservice_json.js: Fixed problem with old Safari 
	versions (broken regexp replace callback).

2007-05-31  jtl  <jtl@schlund.de>
